feat: add tailor api
